# aisec-invariants-mlir

./: .gitignore  CLAUDE.md  MODULE.bazel  NOTICE  README.md  extension.bzl  flake.nix
.github/workflows/: leak-check-ci.yml
docs/: embedding-model-extraction-threat-model.md
docs/priorlit/: csi_nn_paper.siddharth.md
docs/research/: formal_verif.pipeline.agents.md  formal_verif.threat-model.agents.md  leak_check.autotune-select.agents.md  leak_check.count-confound.agents.md  leak_check.environment.siddarth.md  leak_check.environment.siddharth.md  leak_check.exfil.agents.md  leak_check.freezing-taint.agents.md  leak_check.freezing.agents.md  leak_check.lessons.agents.md  leak_check.methodology.siddharth.md  leak_check.results.siddharth.md  mlir-tv-custom-dialect.agents.md
docs/research/actor-based-information-flow/: Actor-Based IFC for Tensor MLIR — Competitive Landscape.md  Actor-Based IFC for Tensor MLIR — Research Plan.md  Actor-Based IFC for Tensor MLIR — Threat Model & Attack Harness.md  Actor_Aware_Relational_Security_Verifier_Architecture.md  LLVM Dev Mtg 2026 — Submission Kit.md
docs/research/journal/: 2026-07-06-two-approaches.siddarth.md
include/AISec/Transforms/: BUILD.bazel  Passes.h  Passes.td
initial/: .bazelrc
initial/nix/: cc-toolchain.nix
initial/test/: BUILD.bazel  lit.site.cfg.py.in
initial/test/Transforms/VerifyNonInterference/: mobilenet-block.mlir
initial/tools/aisec-opt/: BUILD.bazel
lib/: BUILD.bazel
lib/Transforms/: BUILD.bazel  VerifyNonInterference.cpp
nix/: BUILD.bazel
prototypes/Staging_NI/: CMakeLists.txt  readme.md  test.mlir
prototypes/Staging_NI/include/stagingNI/: Passes.h  Passes.td
prototypes/Staging_NI/lib/: CMakeLists.txt  VerifyStagingNonInterference.cpp
prototypes/Staging_NI/tools/: CMakeLists.txt  staging-ni-opt.cpp
prototypes/compiler_ct_harness/: README.md
prototypes/compiler_ct_harness/c/: Makefile  breach_compressed_length_bad.c  breach_compressed_length_fixed.c  check_harness.py  ckks_unsafe_release_bad.c  ckks_unsafe_release_fixed.c  clangover_ct_cmov.c  clangover_poly_frommsg_fixed.c  clangover_poly_frommsg_vulnerable.c  dynamic_kv_length_bad.c  dynamic_kv_length_fixed.c  equivalence_driver.c  explicit_error_oracle_bad.c  explicit_error_oracle_fixed.c  kyberslash1_poly_tomsg_fixed.c  kyberslash1_poly_tomsg_vulnerable.c  kyberslash2_compress_fixed.c  kyberslash2_compress_vulnerable.c  leftoverlocals_scratch_bad.c  leftoverlocals_scratch_fixed.c  redis_pool_reuse_bad.c  redis_pool_reuse_fixed.c  secret_embedding_index_bad.c  secret_embedding_index_fixed.c  toolchains.mk  wolfssl_3579_mul_fixed.c  wolfssl_3579_mul_vulnerable.c  wolfssl_3580_mask_fixed.c  wolfssl_3580_mask_vulnerable.c  wrong_host_fhe_reveal_bad.c  wrong_host_fhe_reveal_fixed.c  wrong_party_plaintext_fixed.c
prototypes/compiler_ct_harness/mlir/: L0_L1_L2_PIPELINE.md  README.md  breach_compressed_length.bad.mlir  breach_compressed_length.fixed.mlir  ckks_unsafe_release.bad.mlir  ckks_unsafe_release.fixed.mlir  clangover_poly_frommsg.lowered_bad.mlir  clangover_poly_frommsg.lowered_fixed.mlir  clangover_poly_frommsg.source.mlir  dynamic_kv_length.bad.mlir  dynamic_kv_length.fixed.mlir  explicit_error_oracle.bad.mlir  explicit_error_oracle.fixed.mlir  kyberslash1_poly_tomsg.bad.mlir  kyberslash1_poly_tomsg.fixed.mlir  kyberslash2_compress.bad.mlir  kyberslash2_compress.fixed.mlir  leftoverlocals_scratch.bad.mlir  leftoverlocals_scratch.fixed.mlir  (+16 more)
prototypes/compiler_harness/: .gitignore  Makefile  README.md  lit.cfg.py  requirements-test.txt
prototypes/formal_verif/: .dockerignore  .gitignore  Dockerfile  PIPELINE.md  README.md  dockerize.sh  run_all.sh  setup_binsec.sh
prototypes/formal_verif/ctverify/: README.md  pyproject.toml
prototypes/formal_verif/ctverify/src/ctverify/: __init__.py  checkct.py  cli.py  contract.py
prototypes/formal_verif/ctverify/tests/: test_contract.py  test_parse.py
prototypes/formal_verif/infoleak/: .gitignore  pyproject.toml
prototypes/formal_verif/infoleak/csrc/: driver.c  kernel_abi.h  timer.h
prototypes/formal_verif/infoleak/src/infoleak/: __init__.py  cli.py  contract_check.py  estimate.py  ftz.py  measure.py
prototypes/formal_verif/infoleak/tests/: test_contract_check.py  test_estimate.py  test_ftz.py
prototypes/initial/: BUILD.bazel
prototypes/leak_check/: .gitignore  PRINCIPLES.md  README.md  _autotune_select_worker.py  _autotune_worker.py  _denorm_worker.py  _freezing_taint_worker.py  _freezing_worker.py  _softmax_worker.py  act_fast.out  corpus.py  corpus_activations.py  corpus_freezing.py  denormal_probe.py  honest_timing.py  honest_timing.run.out  instruments.py  measured_run.py  noninterference.py  notebooks_Compilers.ipynb  probe_autotune.out  probe_autotune.py  probe_autotune_select.out  probe_autotune_select.py  probe_exfil.out  probe_exfil.py  probe_fastmath.out  probe_fastmath.py  probe_freezing.out  probe_freezing.py  probe_freezing_taint.out  probe_freezing_taint.py  probe_softmax.out  probe_softmax.py  probe_softmax_stability.out  probe_softmax_stability.py  pyproject.toml  run_activations.out  run_activations.py  run_all.out  (+5 more)
prototypes/leak_check/attacks/: README.md  __init__.py  base.py
prototypes/leak_check/attacks/early_exit_gpt/: __init__.py  check.py  compare.py  config.py  enclave.py  evaluate.py  extraction.py  logit_extraction.py  mlp_extraction.py  mlp_surrogate.py  model.py  oracle.py  run.py  sampling.py
prototypes/leak_check/ctbench/: harness.c  kernels.c  run_ct.out  run_ct.py
prototypes/leak_check/tests/: test_autotune_select.py  test_count_confound.py  test_exfil.py  test_freezing.py  test_freezing_taint.py  test_instruments.py  test_noninterference.py  test_sweep_overnight.py
prototypes/mlir_leak/: .gitignore  README.md  cond.mlir  dynshape.mlir  dynshape_t.mlir  gather.mlir  matvec.mlir  matvec_t.mlir  mlir_driver.c  run_mlir.py  select.mlir  select_t.mlir  sweep.O2.out  sweep.O3.out  sweep.mlir_axis.out
prototypes/nanoGPT-analysis.claude/: nanoGPT_profiling.ipynb
test/: lit.cfg.py
tools/aisec-opt/: aisec-opt.cpp
(+119 files in other folders)
