[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leak-check"
version = "0.1.0"
description = "Detecting compiler-introduced information leaks in deep learning"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "hypothesis",
]
